<resources>
    <string name="app_name">Of To Offer</string>

    <string name="edit_name_hint">Name</string>
    <string name="edit_email_hint">Email</string>
    <string name="edit_password_hint">Password</string>
    <string name="button_register_user">CREATE ACCOUNT</string>
    <string name="button_login_user">Log In</string>
    <string name="button_login">Already have an account? Log in.</string>
    <string name="button_register">You Do not have an account? Sign up.</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_register_email">Enter Your Registered Email?</string>
    
    <string name="error_enter_name">Enter USer Name</string>
    <string name="error_enter_email">Enter Email</string>
    <string name="error_enter_password">Enter Password</string>

    <string name="error_name">User name must be less than 10 character</string>
    <string name="error_email">Invalid Email</string>
    <string name="error_password">Password must be equal to 8 character </string>
</resources>
